# sycl-bench

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md
cmake/: HasFeatures.cmake
cmake/has-features/: HasFeatures.cmake
cmake/has-features/src/: fp64_support_dummy.cpp  group_algorithms_dummy.cpp  kernel_reduction_dummy.cpp  spec_constants_dummy.cpp
compiletime/: compiletime.cpp  compiletime_gen.rb  eval.rb  experiment.rb  kernels.inc
include/: benchmark_hook.h  benchmark_traits.h  bitmap.h  command_line.h  common.h  memory_wrappers.h  nv_energy_meas.h  prefetched_buffer.h  result_consumer.h  time_meas.h  time_metrics.h  type_traits.h  utils.h  vec_add.cpp
median/: median.cpp
micro/: DRAM.cpp  arith.cpp  host_device_bandwidth.cpp  local_mem.cpp  main.cpp  pattern_DRAM.cpp  pattern_L2.cpp  pattern_arith.cpp  pattern_bandwidth.cpp  pattern_sf.cpp  pattern_shared.cpp  patterns.h  sf.cpp
pattern/: prefixsum.cpp  reduction.cpp  scan.cpp  segmentedreduction.cpp  segmentedscan.cpp
polybench/: 2DConvolution.cpp  2mm.cpp  3DConvolution.cpp  3mm.cpp  CMakeLists.txt  LICENSE  atax.cpp  bicg.cpp  correlation.cpp  covariance.cpp  fdtd2d.cpp  gemm.cpp  gesummv.cpp  gramschmidt.cpp  mvt.cpp  syr2k.cpp  syrk.cpp
polybench/common/: polybenchUtilFuncts.h  syclUtilFuncts.h
reductions/: atomic_reduction.cpp  kernel_reduction.cpp  reduce_over_group_no_atomic.cpp  reduce_over_group_with_atomic.cpp  reduction_local_mem.cpp  reduction_local_mem_no_atomic.cpp  reduction_local_mem_with_atomic.cpp
results/: clean_lines.sh  plot.ipynb  run.sh
runtime/: blocked_transform.cpp  dag_task_throughput_independent.cpp  dag_task_throughput_sequential.cpp  matmulchain.cpp  ndrange_hierarchical.cpp  ranges.cpp  short_long.cpp
single-kernel/: aes_encrypt.cpp  bit_compression.cpp  black_scholes.cpp  flowmap.cpp  ftle.cpp  geometric_mean.cpp  kmeans.cpp  knn.cpp  lin_reg.cpp  lin_reg_coeff.cpp  lin_reg_error.cpp  median.cpp  merse_twister.cpp  mol_dyn.cpp  nbody.cpp  perlin.cpp  scalar_prod.cpp  sinewave.cpp  sobel.cpp  sobel5.cpp  sobel7.cpp  spmv.cpp  vec_add.cpp
sobel/: sobel.cpp  sobel.h
sobel5/: sobel5.cpp
spec_constants/: spec_constant_convolution.cpp
sycl2020/: usm_accessors_latency.cpp  usm_allocation_latency.cpp  usm_common.hpp  usm_host_device.cpp  usm_host_device_bandwidth.cpp  usm_instr_mix.cpp
sycl2020/USM/: usm_accessors_latency.cpp  usm_allocation_latency.cpp  usm_instr_mix.cpp  usm_pinned_overhead.cpp  usm_utils.hpp
sycl2020/atomics/: atomic_reduction.cpp
sycl2020/group_algorithms/: reduce_over_group.cpp
sycl2020/kernel_reduction/: kernel_reduction.cpp
sycl2020/spec_constants/: spec_constant_convolution.cpp
template/: benchmark.cpp  common.h  nv_energy_meas.h  sobel.cpp  time_meas.h  vec_add.cpp
vec_add/: vec_add.cpp
